# course-outliner-agent

./: README.md  pyproject.toml
api/: main.py
src/: report.json  report.md
src/course/: crew.py  main.py
src/course/config/: agents.yaml  tasks.yaml
src/course/tools/: exa_ai.py
src/db/: chroma.sqlite3
